changed intro text

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <h5 class="header-text">Morgan Brattstrom</h5>
       </div>
       <div class="two-thirds column main-box">
-        <p>Hi, I'm morgan.</p>
-        <p>I love containers and chipotle</p>
+        <p>I'm Morgan.</p>
+        <p>...still a WIP</p>
         <div>
           <a href="" class="personal-links">Resume</a>
           <a href="https://github.com/uhfraid" class="personal-links">Github</a>
