--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
   <meta charset="utf-8">
 	<script async src="https://cdn.ampproject.org/v0.js"></script>
-  <title>Morgan Brattstrom</title>
+  <title>Morgan</title>
   <meta name="author" content="Timothy Ko">
-  <meta name="description" content="Morgan Brattstrom's Personal Website">
-	<meta name="keywords" content="Morgan, Brattstrom, Personal, Website, resume, Morgan Brattstrom, Brattstrom">
+  <meta name="description" content="Morgan Personal Website">
+	<meta name="keywords" content="Morgan,Personal, Website, resume, Brattstrom, Brattstrom">
 	<link rel="canonical" href="uhfraid.com">
 	<meta name="robots" content="index, follow">
   <script type="application/ld+json">
@@ -41,11 +41,11 @@
     
     <div class="row">
       <div class="title">
-        <h5 class="header-text">Morgan Brattstrom</h5>
+        <h5 class="header-text">Morgan</h5>
       </div>
       <div class="two-thirds column main-box">
-        <p>I'm Morgan.</p>
-        <p>...still a WIP</p>
+        <p>Yeah I know</p>
+        <p>...it's still a WIP</p>
         <div>
           <a href="" class="personal-links">Resume</a>
           <a href="https://github.com/uhfraid" class="personal-links">Github</a>
