--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
         ]
       }
   </script>
-    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-<link rel="icon" type="image/png" href="images/favicon.ico">
+		<style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+	<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="css/style.css">
+	  <link rel="stylesheet" href="css/normalize.css">
+	  <link rel="stylesheet" href="css/skeleton.css">
+	<link rel="icon" type="image/png" href="images/favicon.ico">
+
 </head>
 <body>
 <div class="container">
@@ -35,15 +36,11 @@
         <h5 class="header-text">Morgan</h5>
       </div>
       <div class="two-thirds column main-box">
-        <p>Yeah I know</p>
+        <p>Yeah, I know,</p>
         <p>...it's still a WIP</p>
         <div>
           <a href="" class="personal-links">Resume</a>
           <a href="https://github.com/uhfraid" class="personal-links">Github</a>
-          <a href="" class="personal-links">Blog</a>
-          <a href="" class="personal-links">LinkedIn</a>
-          <a href="" class="personal-links">Email</a>
-          <a href="" class="personal-links">Twitter</a>
         </div>
       </div>
     </div>
@@ -53,7 +50,7 @@
         <h5 class="publ-title">Personal Projects</h5>
         <div class="row">
           <div class="publ-text"><span class="publ-date">April 2, 2018</span><a href="">Trackrecord</a></div>
-          <div class="publ-text"><span class="publ-date">Nov 15, 2017</span><a href="">Distributed Workflow Job Monitoring</a></div>
+          <div class="publ-text"><span class="publ-date">Nov 15, 2017</span><a href="">Distributed Workflow Monitoring</a></div>
           <div class="publ-text"><span class="publ-date">Dec 12, 2016</span><a href="">Aio Python SNMP Library</a></div>
         </div>
       </div>
